# alt-data-platform-india

./: .env.example  .gitignore  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  start.md  tasks.py
.github/workflows/: ci.yml
flows/: gst_flow.py  posoco_flow.py  railway_flow.py
infra/db/migrations/: env.py
infra/db/migrations/versions/: 0001_initial.py
infra/db/seed/: seed.sql
infra/docker/: api.Dockerfile
infra/grafana/dashboards/: pipeline_health.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasource.yml
scripts/: gen_sample_posoco.py
src/adp/: __init__.py  cli.py
src/adp/api/: main.py
src/adp/api/static/: app.js  index.html  styles.css
src/adp/backtest/: __init__.py  engine.py
src/adp/core/: __init__.py  base.py  config.py  db.py  logging.py  marketdata.py  pit.py  registry.py  schemas.py  sql.py  storage.py  universe.py
src/adp/features/: __init__.py  _monthly.py  compute.py  gst_features.py  posoco_features.py  railway_features.py
src/adp/research/: __init__.py  multifactor.py  posoco_factor.py
src/adp/signals/: __init__.py  model.py
src/adp/sources/: __init__.py  _periodic.py
src/adp/sources/_template/: __init__.py  source.py
src/adp/sources/gst/: __init__.py  parser.py  source.py
tests/: conftest.py  test_backtest_smoke.py  test_gst_parser.py  test_monthly_features.py  test_pit.py  test_posoco_parser.py  test_railway_parser.py  test_registry.py  test_signals.py
tests/fixtures/: gst_2025-03.csv  railway_2025-03.csv
(+11 files in other folders)
