[project]
name = "adp"
version = "0.1.0"
description = "Alternative Data Platform for Indian Equities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "boto3>=1.34",
    "structlog>=24.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pdfplumber>=0.11",
    "prefect>=3,<4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "statsmodels>=0.14",
    "yfinance>=0.2.40",
    "typer>=0.12",
]

[project.optional-dependencies]
research = ["jupyterlab>=4.2", "alphalens-reloaded>=0.4", "matplotlib>=3.8"]
dev = ["pytest>=8.2", "ruff>=0.5", "httpx>=0.27"]

[project.scripts]
adp = "adp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
